# src/docs/swagger.yaml
@@ -86,6 +86,12 @@ paths:
     $ref: 'src/docs/paths/companyManagers/search.yaml'
   /api/companyManagers/confirm:
     $ref: 'src/docs/paths/companyManagers/confirm.yaml'
+  /api/companyManagers/order/all:
+    $ref: 'src/docs/paths/companyManagers/all.yaml'
+  /api/companyManagers/order/{orderId}:
+    $ref: 'src/docs/paths/companyManagers/order.yaml'
+  /api/companyManagers/order/{orderId}/geo:
+    $ref: 'src/docs/paths/companyManagers/geo.yaml'
 
   # CONTACTS
   /api/contacts/all:
